--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shopping-cart",
   "version": "0.1.0",
+  "homepage": "https://almeida-91.github.io/shopping-cart/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -45,6 +46,5 @@
   },
   "devDependencies": {
     "prettier": "^2.7.1"
-  },
-  "homepage": "https://almeida-91.github.io/shopping-cart/"
+  }
 }
